@@ -1359,6 +1359,8 @@
 2300,1000,2000,0,0,4000:8000:12000,0
 //-- SC_CHAOSPANIC
 2301,0,2000,0,0,5000:10000:15000,30000
+//-- SC_MAELSTROM
+2302,2000,2000,0,0,7000:14000:21000,0
 //-- SC_BLOODYLUST
 2303,2000,2000,0,0,7000:14000:21000,30000
 //-- SC_FEINTBOMB
