@@ -917,7 +917,7 @@ int unit_skilluse_id2(struct block_list *src, int target_id, short skill_num, sh
 {
 	struct unit_data *ud;
 	struct status_data *tstatus;
-	struct status_change *sc;
+	struct status_change *sc, *tsc;
 	struct map_session_data *sd = NULL;
 	struct block_list * target = NULL;
 	unsigned int tick = gettick();
@@ -931,7 +931,7 @@ int unit_skilluse_id2(struct block_list *src, int target_id, short skill_num, sh
 	ud = unit_bl2ud(src);
 
 	if(ud == NULL) return 0;
-	sc = status_get_sc(src);	
+	sc = status_get_sc(src);
 	if (sc && !sc->count)
 		sc = NULL; //Unneeded
 
@@ -996,6 +996,11 @@ int unit_skilluse_id2(struct block_list *src, int target_id, short skill_num, sh
 		target = map_id2bl(target_id);
 
 	if( !target || src->m != target->m || !src->prev || !target->prev )
+		return 0;
+
+	tsc = status_get_sc(target);
+
+	if( tsc && tsc->data[SC__MANHOLE] )
 		return 0;
 
 	//Normally not needed because clif.c checks for it, but the at/char/script commands don't! [Skotlex]
